padding below pfp fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -254,6 +254,7 @@ header{
     #welcome-section img{
       height: 200px;
       width: 200px;
+      margin-bottom: 5+px;
     }
 
     h1 {
